--- a/Model copy/PlayerCardCollectionViewCell.xib
+++ b/Model copy/PlayerCardCollectionViewCell.xib
@@ -13,24 +13,24 @@
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
         <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="playerCardCollectionViewCell" id="gTV-IL-0wX" customClass="PlayerCardCollectionViewCell" customModule="golfCardGame" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="183" height="313"/>
+            <rect key="frame" x="0.0" y="0.0" width="85" height="139"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
-                <rect key="frame" x="0.0" y="0.0" width="183" height="313"/>
+                <rect key="frame" x="0.0" y="0.0" width="85" height="139"/>
                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                 <subviews>
-                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wXX-2L-96k">
-                        <rect key="frame" x="0.0" y="0.0" width="183" height="313"/>
+                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="wXX-2L-96k">
+                        <rect key="frame" x="0.0" y="0.0" width="85" height="139"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                     </imageView>
                 </subviews>
             </view>
             <viewLayoutGuide key="safeArea" id="ZTg-uK-7eu"/>
-            <size key="customSize" width="183" height="313"/>
+            <size key="customSize" width="291" height="574"/>
             <connections>
                 <outlet property="imageView" destination="wXX-2L-96k" id="Kc6-8M-hUM"/>
             </connections>
-            <point key="canvasLocation" x="228.2608695652174" y="241.40625"/>
+            <point key="canvasLocation" x="-305.07246376811594" y="15.401785714285714"/>
         </collectionViewCell>
     </objects>
 </document>
