collection views now display cards

--- a/golfCardGame/Base.lproj/Main.storyboard
+++ b/golfCardGame/Base.lproj/Main.storyboard
@@ -182,9 +182,30 @@
                                     <color key="titleColor" red="0.096103177159999997" green="0.12116903330000001" blue="0.4656560421" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
                                 </state>
                                 <connections>
-                                    <action selector="drawCard:" destination="BYZ-38-t0r" eventType="touchUpInside" id="l2V-lE-Rsg"/>
+                                    <action selector="drawCardPressed:" destination="BYZ-38-t0r" eventType="touchUpInside" id="pJH-Mm-9Dp"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="C1:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0ba-ss-SzA">
+                                <rect key="frame" x="69" y="236" width="24" height="14"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" tag="1" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="C2:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QV0-Uj-mQZ">
+                                <rect key="frame" x="195" y="229" width="27" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="C3:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="QYR-Ey-Oxu">
+                                <rect key="frame" x="320" y="229" width="27" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.0" green="0.56284224989999998" blue="0.31881666180000001" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
@@ -196,12 +217,16 @@
                         <outlet property="drawCardButton" destination="0Vf-vR-eG4" id="t7P-uD-ANn"/>
                         <outlet property="flipCardButton" destination="Yr5-Zg-5ti" id="Xyv-ke-gRf"/>
                         <outlet property="playerScoreLabel" destination="Xn5-To-leD" id="Wee-6R-AwX"/>
+                        <outlet property="playerSlider" destination="Sb0-sm-8Qq" id="lJd-vh-Axs"/>
                         <outlet property="playersPlayingLabel" destination="vte-l5-JL8" id="kYT-7G-xnl"/>
                         <outlet property="tradeCardButton" destination="M3c-nw-Ppi" id="A1v-bb-0zi"/>
                         <outletCollection property="cardCollectionViews" destination="O4R-nY-gUy" collectionClass="NSMutableArray" id="BRh-9w-Tb4"/>
                         <outletCollection property="cardCollectionViews" destination="abp-0F-vbV" collectionClass="NSMutableArray" id="qIM-8c-gJJ"/>
                         <outletCollection property="cardCollectionViews" destination="9i8-TR-UAB" collectionClass="NSMutableArray" id="jWI-bd-c1o"/>
                         <outletCollection property="cardCollectionViews" destination="xDF-Y1-8UC" collectionClass="NSMutableArray" id="UJS-GM-db3"/>
+                        <outletCollection property="computerScoreLabels" destination="0ba-ss-SzA" collectionClass="NSMutableArray" id="dXT-Pf-wF0"/>
+                        <outletCollection property="computerScoreLabels" destination="QV0-Uj-mQZ" collectionClass="NSMutableArray" id="umu-ib-2S5"/>
+                        <outletCollection property="computerScoreLabels" destination="QYR-Ey-Oxu" collectionClass="NSMutableArray" id="1Y0-Ow-Qtz"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
